# petal-decomposition

./: CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml
src/: ica.rs  lib.rs  linalg.rs  pca.rs  scale.rs
src/linalg/: lapack.rs
