[package]
name = "petal-decomposition"
version = "0.5.1"
description = """
Matrix decomposition algorithms including PCA (principal component analysis)
and ICA (independent component analysis)"""
documentation = "https://docs.rs/petal-decomposition"
readme = "README.md"
homepage = "https://github.com/petabi/petal-decomposition"
repository = "https://github.com/petabi/petal-decomposition"
license = "Apache-2.0"
keywords = ["matrix", "decomposition", "pca", "ica", "dimensionality"]
categories = ["mathematics", "science", "algorithms"]
authors = ["Min Kim <msk@dolbo.net>"]
edition = "2018"
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/petal-decomposition", service = "github" }

[package.metadata.docs.rs]
no-default-features = true

[features]
netlib    = ["lax/netlib"]
openblas  = ["lax/openblas"]
intel-mkl = ["lax/intel-mkl"]

netlib-static   = ["lax/netlib-static"]
netlib-system   = ["lax/netlib-system"]

openblas-static = ["lax/openblas-static"]
openblas-system = ["lax/openblas-system"]

intel-mkl-static = ["lax/intel-mkl-static"]
intel-mkl-system = ["lax/intel-mkl-system"]

serialization = ["serde", "ndarray/serde", "rand/serde1", "rand_pcg/serde1"]

[dependencies]
# lax-0.1 conflicts with cauchy>=0.4
cauchy = ">=0.3, <0.4"
itertools = "0.10"
lapacke = "0.3"
lax = "0.1"
ndarray = "0.15"
# lax-0.1 conflicts with num-complex>=0.4
num-complex = ">=0.3, <0.4"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"

[dev-dependencies]
approx = "0.4"
ndarray = { version = "0.15", features = ["approx"] }
serde_json = "1"

[packages.metadata.docs.rs]
features = ["serialization"]
